WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27475
REGRESSION (
r46142
): Need to remove showTreeThisForThis
https://bugs.webkit.org/show_bug.cgi?id=27475
Summary
REGRESSION (r46142): Need to remove showTreeThisForThis
Ryosuke Niwa
Reported
2009-07-20 18:04:21 PDT
The compile error is caused by showTreeThisForThis in indentOutdentCommand.cpp
Attachments
remove showTreeForThis
(1.36 KB, patch)
2009-07-20 18:06 PDT
,
Ryosuke Niwa
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Ryosuke Niwa
Comment 1
2009-07-20 18:06:58 PDT
Created
attachment 33130
[details]
remove showTreeForThis
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug